--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="col">
         <div class="box">
           <span><i class="material-icons"> calendar_today </i> Nov 2020 - Present</span>
-          <h3><a href="https://www.airobosoft.com/wp/">ICT Academy Training</a></h3>
+          <h3><a href="https://www.awsacademy.com/vforcesite/LMS_Login">ICT Academy Training</a></h3>
           <p class="university">AWS Academy Cloud Foundations</p>
         </div>
        <div class="col">
@@ -92,6 +92,18 @@
           <span><i class="material-icons"> calendar_today </i> Feb 2024 - Present</span>
           <h3><a href="https://www.airobosoft.com/wp/">Artificial Intelligence & Machine Learning Trainee</a></h3>
           <p class="university">AiRobosoft products and services</p>
+        </div> 
+        </div>
+          <div class="col">
+        <div class="box">
+          <span><i class="material-icons"> calendar_today </i> Feb 2024 - Present</span>
+          <h3><a href="https://www.upskillcampus.com/">Data Science & Machine Learning Trainee</a></h3>
+          <p class="university">UpSkill campus and uniconverge technologies</p>
+        </div> 
+              <div class="box">
+          <span><i class="material-icons"> calendar_today </i> Feb 2024 - Present</span>
+          <h3><a href="https://www.boltiot.com/" <img class="mr-3" src="https://th.bing.com/th/id/OIP.dMEjpJ4z8mcGjij-jS1xTgHaHk?rs=1&pid=ImgDetMain" width="50" height="50" alt="Generic placeholder image">>Internet of Thing & Machine Learning Trainee</a></h3>
+          <p class="university">Bolt IoT </p>
         </div> 
         </div>
       </div>
