--- a/index.html
+++ b/index.html
@@ -40,12 +40,11 @@
  <footer>
         <section class="contact" id="contact">
     
-    <h1 class="heading">Get in touch</h1>
-    <div class="col-container">
-      <div class="col"> 
+    <h1 class="heading">Contact me </h1>
+      <div class="col" style="background-color: gray;"> 
             <table>
         <tbody>
-                <tr bg-colour: bg-dark;>
+                <tr>
                     <td>Address: Bangalore, Karnataka</td>
                     <td>Github: <a href="https://github.com/Lalima-tmr">https://github.com/Lalima-tmr</a></td>
                 </tr>
@@ -67,6 +66,7 @@
         <div class="box">
             <h1 class="heading">About <span>me</span></h1>
             <h2 style="color: rgb(38, 184, 152); align-center">Aspiring Web Developer | Passionate Coder | Fresher </h2>
+            <div class="col-container">
             <p>
                 Hi, my name is Lalima, and I'm studying Information Science and Engineering at Visvesvaraya Technological University. I've completed three internships in Artificial Intelligence, Machine Learning, Data Science, and the Internet of Things, and I'm learning Web Development at SpartaCoding Club.
                 I love working on innovative projects and collaborating with dynamic teams. I believe that hard work and determination can help anyone achieve their goals. 
@@ -83,26 +83,26 @@
     <div class="col-container">
       <div class="col">
         <div class="box">
-          <span><i class="material-icons"> calendar_today </i> Nov 2020 - Present</span>
+          <span><i class="material-icons"> calendar_today </i> Feb 2024 - Present</span>
           <h3><a href="https://www.awsacademy.com/vforcesite/LMS_Login">ICT Academy Training</a></h3>
           <p class="university">AWS Academy Cloud Foundations</p>
         </div>
        <div class="col">
         <div class="box">
-          <span><i class="material-icons"> calendar_today </i> Feb 2024 - Present</span>
+          <span><i class="material-icons"> calendar_today </i> Aug 2023 - Sep 2023</span>
           <h3><a href="https://www.airobosoft.com/wp/">Artificial Intelligence & Machine Learning Trainee</a></h3>
           <p class="university">AiRobosoft products and services</p>
         </div> 
         </div>
           <div class="col">
         <div class="box">
-          <span><i class="material-icons"> calendar_today </i> Feb 2024 - Present</span>
+          <span><i class="material-icons"> calendar_today </i> Aug 2023 - Sep 2023</span>
           <h3><a href="https://www.upskillcampus.com/">Data Science & Machine Learning Trainee</a></h3>
           <p class="university">UpSkill campus and uniconverge technologies</p>
         </div> 
               <div class="box">
-          <span><i class="material-icons"> calendar_today </i> Feb 2024 - Present</span>
-          <h3><a href="https://www.boltiot.com/" <img class="mr-3" src="https://th.bing.com/th/id/OIP.dMEjpJ4z8mcGjij-jS1xTgHaHk?rs=1&pid=ImgDetMain" width="50" height="50" alt="Generic placeholder image">>Internet of Thing & Machine Learning Trainee</a></h3>
+          <span><i class="material-icons"> calendar_today </i> Aug 2023 - Sep 2023</span>
+          <h3><a href="https://www.boltiot.com/" ><img class="mr-3" src="https://th.bing.com/th/id/OIP.dMEjpJ4z8mcGjij-jS1xTgHaHk?rs=1&pid=ImgDetMain" width="50" height="50" alt="Generic placeholder image">Internet of Thing & Machine Learning Trainee</a></h3>
           <p class="university">Bolt IoT </p>
         </div> 
         </div>
