--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         position: relative;
         height: 100vh; /* Set the height of the viewport */
     }
-    #footer {
+    #contact {
         position: absolute;
         bottom: 0;
         width: 100%;
         text-align: center;
-        background-color: #f0f0f0; /* Optional background color */
+        /*background-color: #f0f0f0; Optional background color */
     }
 </style>
 <body style="background-color: pink;">
