--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <style>
     #container {
         position: relative;
-        height: 100vh; /* Set the height of the viewport */
+        height: 100vh; Set the height of the viewport */
     }
     #contact {
         position: absolute;
@@ -47,9 +47,8 @@
         <span><b>Lalima<b></span>
         </h1>
         <p>This is my resume</p>
-    <footer>
-        <section class="contact" id="contact">
-      <div class="container"> 
+       <!-- <section class="contact" id="contact">-->
+      <div class="contact" id="contact"> 
             <table>
                 <tr>
                     <td>Address: Bangalore, Karnataka</td>
@@ -63,8 +62,7 @@
             </table>
       </div>
     </div>
-        </section>
-    </footer>
+       <!-- </section>-->
     </section>
             
     <section class="about" id="about" style="background-color: light-gray;" >
