--- a/index.html
+++ b/index.html
@@ -13,10 +13,6 @@
 
 </head>
     <style>
-    #container {
-        position: relative;
-        height: 100vh; Set the height of the viewport */
-    }
     #contact {
         position: absolute;
         bottom: 0;
@@ -68,7 +64,7 @@
     <section class="about" id="about" style="background-color: light-gray;" >
         <div class="box">
             <h1 class="heading">About <span>me</span></h1>
-            <h2 style="color: rgb(38, 184, 152); alignment: center;">Aspiring Web Developer | Passionate Coder | Fresher </h2>
+            <h2 style="color: rgb(38, 184, 152); text-align: center;">Aspiring Web Developer | Passionate Coder | Fresher </h2>
             <div class="col-container">
             <p>
                 Hi, my name is Lalima, and I'm studying Information Science and Engineering at Visvesvaraya Technological University. I've completed three internships in Artificial Intelligence, Machine Learning, Data Science, and the Internet of Things, and I'm learning Web Development at SpartaCoding Club.
