--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <span><b>Lalima<b></span>
         </h1>
         <p>This is my resume</p>
-       <!-- <section class="contact" id="contact">-->
+       <!-- <section class="contact" id="contact">
       <div class="contact" id="contact"> 
             <table>
                 <tr>
@@ -58,7 +58,7 @@
             </table>
       </div>
     </div>
-       <!-- </section>-->
+      </section>-->
     </section>
             
     <section class="about" id="about" style="background-color: light-gray;" >
@@ -67,8 +67,10 @@
             <h2 style="color: rgb(38, 184, 152); text-align: center;">Aspiring Web Developer | Passionate Coder | Fresher </h2>
             <div class="col-container">
             <p>
-                Hi, my name is Lalima, and I'm studying Information Science and Engineering at Visvesvaraya Technological University. I've completed three internships in Artificial Intelligence, Machine Learning, Data Science, and the Internet of Things, and I'm learning Web Development at SpartaCoding Club.
-                I love working on innovative projects and collaborating with dynamic teams. I believe that hard work and determination can help anyone achieve their goals. 
+                Hi, My name is Lalima and I am a final year student pursuing a degree in Information Science and Engineering at Visvesvaraya Technological University. <br>
+                I am writing to introduce myself and share my experience and skills. 
+                Through my three internships, I have gained hands-on experience in Artificial Intelligence, Machine Learning, Data Science, and the Internet of Things. Additionally, I am currently expanding my knowledge by learning web development at SpartaCoding Club. 
+                I love working on innovative projects and collaborating with dynamic teams. I believe that hard work and determination can help anyone achieve their goals. <br>
 
                 Thank you for taking the time to read my message! 
             </p>
