--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <h1 class="heading">About <span>me</span></h1>
             <h2 style="color: rgb(38, 184, 152); text-align: center;">Aspiring Web Developer | Passionate Coder | Fresher </h2>
             <div class="col-container">
-            <p>
+            <p text-transform: none>
                 Hi, My name is Lalima and I am a final year student pursuing a degree in Information Science and Engineering at Visvesvaraya Technological University. <br>
                 I am writing to introduce myself and share my experience and skills. 
                 Through my three internships, I have gained hands-on experience in Artificial Intelligence, Machine Learning, Data Science, and the Internet of Things. Additionally, I am currently expanding my knowledge by learning web development at SpartaCoding Club. 
@@ -215,6 +215,7 @@
 
 <section class="footer" id="footer">
   <div class="socials">
+    <a href="tel:6205733996" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-phone" width="40" height="40"></ion-icon></a>
     <a href="#" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-google" width="40" height="40"></ion-icon></a>
     <a href="#" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-twitter" width="40" height="40"></ion-icon></a>
     <a href="https://www.linkedin.com/in/lalima-singh015" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-linkedin" width="40" height="40"></ion-icon></a>
