--- a/index.html
+++ b/index.html
@@ -215,7 +215,9 @@
 
 <section class="footer" id="footer">
   <div class="socials">
-    <a href="tel:6205733996" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-phone" width="40" height="40"></ion-icon></a>
+<!--       <ion-icon name="call-outline"></ion-icon> -->
+    <a href="tel:6205733996" target="_blank" rel="noopener noreferrer"><ion-icon name="call-outline" width="40" height="40"></ion-icon></a>
+<!--     <a href="tel:6205733996" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-phone" width="40" height="40"></ion-icon></a> -->
     <a href="#" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-google" width="40" height="40"></ion-icon></a>
     <a href="#" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-twitter" width="40" height="40"></ion-icon></a>
     <a href="https://www.linkedin.com/in/lalima-singh015" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-linkedin" width="40" height="40"></ion-icon></a>
