--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
         </div>
 
         <div class="home-img">
-            <img src="home.jpg" alt="">
+            <img src="Images_/home.jpg" alt="">
         </div>
 
     </section>
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="about.jpg" alt="">
+            <img src="Images_/about.jpg" alt="">
         </div>
 
         <div class="about-content">
@@ -94,7 +94,7 @@
 
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="about.jpg" alt="">
+                <img src="Images_/about.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>About Project......</p>
@@ -105,7 +105,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="about.jpg" alt="">
+                <img src="Images_/about.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>About Project......</p>
@@ -116,7 +116,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="about.jpg" alt="">
+                <img src="Images_/about.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>About Project......</p>
@@ -127,7 +127,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="about.jpg" alt="">
+                <img src="Images_/about.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>About Project......</p>
@@ -138,7 +138,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="about.jpg" alt="">
+                <img src="Images_/about.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>About Project......</p>
@@ -149,7 +149,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="about.jpg" alt="">
+                <img src="Images_/about.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>About Project......</p>
