--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="Images_/about.jpg" alt="">
+                <img src="Images/certificate1.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>About Project......</p>
