--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
         </div>
 
         <div class="home-img">
-            <img src="images\about.jpg" alt="">
+            <img src="images/about.jpg" alt="">
         </div>
     </section>
 
 <!--about section-->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="images\about.jpg" alt="">
+            <img src="images/about.jpg" alt="">
         </div>
 
         <div class="about-content">
@@ -98,7 +98,7 @@
 
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="images\prj1.png" alt="">
+                <img src="images/prj1.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Prediction of Agriculture Crop Production In India</h4>
                     <p>Aims to leverage data science and machine learning to provide accurate predictions for crop production, ultimately contributing to better agricultural decision-making, resource allocation, and food security in India.</p>
@@ -109,7 +109,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images\prj2.jpg" alt="">
+                <img src="images/prj2.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Home Automation App</h4>
                     <p>I have undertaken the development of a 'Home Automation Application' project utilizing the Bolt IoT Cloud platform to provide modern and convenient solutions for home automation.</p>
@@ -120,7 +120,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images\prj3.png" alt="">
+                <img src="images/prj3.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Billboard song scrapper</h4>
                     <p>I have just extracted the rank, song title, and singer details of 50 songs from the Billboard song scraper.</p>
@@ -172,7 +172,7 @@
 
     <div class="cerificate-container">
         <div class="cerificate-box">
-            <img src="images\img1.png" alt="">
+            <img src="images/img1.png" alt="">
             <div class="cerificate-layer">
                 <h4>Certification of completion</h4>
                 <p>AWS Academy Graduate - AWS Academy Cloud Foundations</p>
@@ -183,7 +183,7 @@
         </div>
 
         <div class="cerificate-box">
-            <img src="images\img2.png" alt="">
+            <img src="images/img2.png" alt="">
             <div class="cerificate-layer">
                 <h4>Certification of completion</h4>
                 <p>Sparta Coding Club - 01 Frontend Web Development Basics</p>
@@ -194,7 +194,7 @@
         </div>
 
         <div class="cerificate-box">
-            <img src="images\img3.png" alt="">
+            <img src="images/img3.png" alt="">
             <div class="cerificate-layer">
                 <h4>Certificate of Internship</h4>
                 <p>Data Science And Machine Learning</p>
@@ -205,7 +205,7 @@
         </div>
 
         <div class="cerificate-box">
-            <img src="images\img4.png" alt="">
+            <img src="images/img4.png" alt="">
             <div class="cerificate-layer">
                 <h4>Certificate of Internship</h4>
                 <p>Artificial Intelligence And Machine Learning</p>
@@ -216,7 +216,7 @@
         </div>
 
         <div class="cerificate-box">
-            <img src="images\img5.png" alt="">
+            <img src="images/img5.png" alt="">
             <div class="cerificate-layer">
                 <h4>Certificate of Internship</h4>
                 <p>Internet of Things And Machine Learning</p>
@@ -227,7 +227,7 @@
         </div>
 
         <div class="cerificate-box">
-            <img src="images\img6.png" alt="">
+            <img src="images/img6.png" alt="">
             <div class="cerificate-layer">
                 <h4>Certification of Training completion</h4>
                 <p>Data Analytics and Cloud Computing</p>
