--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
-            <a href="#services">Services</a>
-            <a href="#portfolio">Portfolio</a>
+            <a href="#services">Experience</a>
+            <a href="#portfolio">Project</a>
             <a href="#cerificate">Certificate</a>
             <a href="#contact">Contact</a>
         </nav>
@@ -42,7 +42,7 @@
                 <a href="https://github.com/Lalima-tmr"><i class='bx bxl-github'></i></a>
             </div>
             
-            <a href="https://drive.google.com/file/d/18nBm-Pb1XQMhkJ8JgAXLN5W0b_Abf40h/view?usp=drive_link" class="btn">Download CV</a>
+            <a href="https://drive.google.com/file/d/1hEl_4jNdJNRdB0PQtb2tri6LxyxnFGPj/view?usp=sharing" class="btn">Download CV</a>
         </div>
 
         <div class="home-img">
@@ -58,8 +58,13 @@
 
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
-            <h3>Frontend Developer</h3>
-            <p>.............................................</p>
+            <h3>Java Full Stack Developer</h3>
+            <h4>Hello!<br>
+                I'm Lalima
+            </h4>
+            <p>Passionate and dedicated full stack developer, recently graduated and eager to dive into the world of web development.<br>
+                With a strong foundation in both front-end and back-end technologies, I am excited to create dynamic, <br>
+                user-friendly web applications that solve real-world problems.</p>
             <a href="#" class="btn">Read More</a>
         </div>
     </section>
@@ -68,6 +73,28 @@
     <section class="services" id="services">
         <h2 class="heading">My <span>Experience</span></h2>
 
+        <div class="services-container">
+            <div class="services-box">
+                <i class='bx bx-code-alt'></i>
+                <h3>Artificial Intelligence & Machine Learning Trainee</h3>
+                <p>I developed and implemented AI algorithms to improve project accuracy. Analyzed large datasets to build machine-learning projects, optimized algorithms for better performance and improved project accuracy using various modules and tools like Jupyter and PyCharm.</p>
+                <a href="https://www.linkedin.com/company/airobosoft-products-and-services/?originalSubdomain=in" class="btn">Read More</a>
+            </div>
+
+            <div class="services-box">
+                <i class="bx bx-code-alt"></i>
+                <h3>Data Science & Machine Learning Trainee</h3>
+                <p>As a Data Science and Machine Learning Intern at upSkill Campus, I created applications, optimized algorithms, and prototyped machine learning apps. I also used artificial intelligence and machine learning algorithms to develop new products and improve existing ones. To stay current, I studied new technologies and used tools like Python, Jupyter, and GitHub for collaboration and version control.</p>
+                <a href="https://www.linkedin.com/company/upskillcampus/" class="btn">Read More</a>
+            </div>
+
+            <div class="services-box">
+                <i class="bx bx-code-alt"></i>
+                <h3>Internet of Thing & Machine Learning Trainee</h3>
+                <p>During my internship, I gained a comprehensive understanding of IoT systems. Specifically, I developed skills in architecture, protocols, and communication technologies, as well as designing and building robust and scalable systems. Additionally, I learned how to collect, store, and process sensor data from different sources and worked on several machine learning projects for IoT applications.</p>
+                <a href="https://www.linkedin.com/company/inventrom/?originalSubdomain=in" class="btn">Read More</a>
+            </div>
+        </div>
         <div class="services-container">
             <div class="services-box">
                 <i class='bx bx-code-alt'></i>
