--- a/index.html
+++ b/index.html
@@ -76,23 +76,39 @@
         <div class="services-container">
             <div class="services-box">
                 <i class='bx bx-code-alt'></i>
-                <h3>Artificial Intelligence & Machine Learning Trainee</h3>
-                <p>I developed and implemented AI algorithms to improve project accuracy. Analyzed large datasets to build machine-learning projects, optimized algorithms for better performance and improved project accuracy using various modules and tools like Jupyter and PyCharm.</p>
-                <a href="https://www.linkedin.com/company/airobosoft-products-and-services/?originalSubdomain=in" class="btn">Read More</a>
+                <h3>Backend JAVA</h3>
+                <p>Core Java Concepts: OOPs Concepts like inheritance, polymorphisms, abstraction and encapsulation, as well as basic constructs like conditions, loops and data types.<br>
+                    Arrays: An important data structure in java.<br>
+                    JVM: A critical component of JAVA platform that provides a platform-independent environment for running java applications.<br>
+                    JRE: An important part of executing java programs.<br>
+                    Data Structure: Basic data structures like the Stack, linked list, queue, array, tree, and graph.<br>
+                    Garbage Collection: Elementary knowledge.
+                </p>
+                <a href="#" class="btn">Read More</a>
             </div>
 
             <div class="services-box">
                 <i class="bx bx-code-alt"></i>
-                <h3>Data Science & Machine Learning Trainee</h3>
-                <p>As a Data Science and Machine Learning Intern at upSkill Campus, I created applications, optimized algorithms, and prototyped machine learning apps. I also used artificial intelligence and machine learning algorithms to develop new products and improve existing ones. To stay current, I studied new technologies and used tools like Python, Jupyter, and GitHub for collaboration and version control.</p>
-                <a href="https://www.linkedin.com/company/upskillcampus/" class="btn">Read More</a>
+                <h3>Frontend HTML CSS & JAVASCRIPT</h3>
+                <p>Text formatting tags and CSS Text formatting<br>
+                    Media tags & Hyper Links<br>
+                    Tables, Forms & Input tags<br>
+                    CSS Decorations (Background Properties, Animations & Display Properties)<br>
+                    JS Operators, Functions, Object, String & Array<br>
+                    BOM: Events, Popup's & Timing Functions<br>
+                    DOM Manipulation
+                </p>
+                <a href="#" class="btn">Read More</a>
             </div>
 
             <div class="services-box">
                 <i class="bx bx-code-alt"></i>
-                <h3>Internet of Thing & Machine Learning Trainee</h3>
-                <p>During my internship, I gained a comprehensive understanding of IoT systems. Specifically, I developed skills in architecture, protocols, and communication technologies, as well as designing and building robust and scalable systems. Additionally, I learned how to collect, store, and process sensor data from different sources and worked on several machine learning projects for IoT applications.</p>
-                <a href="https://www.linkedin.com/company/inventrom/?originalSubdomain=in" class="btn">Read More</a>
+                <h3>Database SQL</h3>
+                <p>Familiar with of SQL Statements, Data Integrity, and Normalization.<br>
+                    Working knowledge of Joins, SQL Queries, Sub-Queries, and SQL Functions.<br>
+                    Basic knowledge of Co-related Subqueries.
+                </p>
+                <a href="#" class="btn">Read More</a>
             </div>
         </div>
         <div class="services-container">
