--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>My Portfolio</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link href="style.css" rel="stylesheet">
+    <link href="./style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
     <!-- HOME SECTION -->
     <section id="home">
         <div class="profile home-img">
-            <img src="./Images/pic4.jpg" alt="profile">
+            <img src="./images/about.jpg" alt="profile">
         </div>
         <div class="profile home-content">
             <h1>Lalima Kumari</h1>
@@ -44,7 +44,7 @@
     <!-- ABOUT SECTION -->
     <section id="about">
         <div class="profile abt-img">
-            <img src="./Images/pic4.jpg" alt="profile">
+            <img src="./images/about.jpg" alt="profile">
         </div>
         <div class="profile home-content">
             <h1 class="heading">Java Full <span>Stack Developer</span></h1>
@@ -107,7 +107,7 @@
 
         <div class="project-container">
             <div class="project-box">
-                <img src="./images/AI-in-agriculture.jpg" alt="" height="400px">
+                <img src="./images/prj1.png" alt="" height="400px">
                 <div class="project-layer">
                     <h4>Prediction of Agriculture Crop Production In India</h4>
                     <p>Aims to leverage data science and machine learning to provide accurate predictions for crop production, ultimately contributing to better agricultural decision-making, resource allocation, and food security in India.</p>
@@ -118,7 +118,7 @@
             </div>
 
             <div class="project-box">
-                <img src="./images/Home Automation App.jpg" alt="" height="400px">
+                <img src="./images/prj2.png" alt="" height="400px">
                 <div class="project-layer">
                     <h4>Home Automation App</h4>
                     <p>I have undertaken the development of a 'Home Automation Application' project utilizing the Bolt IoT Cloud platform to provide modern and convenient solutions for home automation.</p>
@@ -129,7 +129,7 @@
             </div>
 
             <div class="project-box">
-                <img src="./images/Billboard song scrapper.jpg" alt="" height="400px">
+                <img src="./images/prj3.png" alt="" height="400px">
                 <div class="project-layer">
                     <h4>Billboard song scrapper</h4>
                     <p>I have just extracted the rank, song title, and singer details of 50 songs from the Billboard song scraper.</p>
@@ -147,7 +147,7 @@
 
     <div class="cerificate-container">
         <div class="cerificate-box">
-            <img src="https://drive.google.com/file/d/19KgmGdQUjzw0fx65WaSb4c9O6NkJMb_f/view?usp=sharing" alt="">
+            <img src="./images/img1.png" alt="">
             <div class="cerificate-layer">
                 <h4>Certification of completion</h4>
                 <p>AWS Academy Graduate - AWS Academy Cloud Foundations</p>
@@ -158,7 +158,7 @@
         </div>
 
         <div class="cerificate-box">
-            <img src="https://drive.google.com/file/d/1rr5GMXCTH9vNtT66zv_PiQampIm9xHKF/view?usp=sharing" alt="">
+            <img src="./images/img2.png" alt="">
             <div class="cerificate-layer">
                 <h4>Certification of completion</h4>
                 <p>Sparta Coding Club - 01 Frontend Web Development Basics</p>
@@ -169,7 +169,7 @@
         </div>
 
         <div class="cerificate-box">
-            <img src="https://drive.google.com/file/d/13MvjAfdL6Az9TjexF_PgtwSkSdBGgMKY/view?usp=sharing" alt="">
+            <img src="./images/img3.png" alt="">
             <div class="cerificate-layer">
                 <h4>Certificate of Internship</h4>
                 <p>Data Science And Machine Learning</p>
@@ -180,7 +180,7 @@
         </div>
 
         <div class="cerificate-box">
-            <img src="https://drive.google.com/file/d/1rr5GMXCTH9vNtT66zv_PiQampIm9xHKF/view?usp=sharing" alt="">
+            <img src="./images/img4.png" alt="">
             <div class="cerificate-layer">
                 <h4>Certificate of Internship</h4>
                 <p>Artificial Intelligence And Machine Learning</p>
@@ -191,7 +191,7 @@
         </div>
 
         <div class="cerificate-box">
-            <img src="https://drive.google.com/file/d/1w9iNOtujAa9pZlXSPnV9EbtTl5PIRzT3/view?usp=sharing" alt="">
+            <img src="./images/img5.png" alt="">
             <div class="cerificate-layer">
                 <h4>Certificate of Internship</h4>
                 <p>Internet of Things And Machine Learning</p>
@@ -202,7 +202,7 @@
         </div>
 
         <div class="cerificate-box">
-            <img src="https://drive.google.com/file/d/11P8PJXOEMX6DHXP21PQLunXGjMwyfHpe/view?usp=sharing" alt="">
+            <img src="./images/img6.png" alt="">
             <div class="cerificate-layer">
                 <h4>Certification of Training completion</h4>
                 <p>Data Analytics and Cloud Computing</p>
