--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </div>
 
             <div class="project-box">
-                <img src="./images/prj2.png" alt="" height="400px">
+                <img src="./images/prj2.jpg" alt="" height="400px">
                 <div class="project-layer">
                     <h4>Home Automation App</h4>
                     <p>I have undertaken the development of a 'Home Automation Application' project utilizing the Bolt IoT Cloud platform to provide modern and convenient solutions for home automation.</p>
