--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <img src="./images/about.jpg" alt="profile">
         </div>
         <div class="profile home-content">
-            <h1 class="heading">Java Full <span>Stack Developer</span></h1><br><br><br><br>
+            <h1 class="heading">Java Full <span>Stack Developer</span></h1><br><br>
             <h3>Hello!<br> I'm Lalima</h3>
             <p>Passionate and dedicated full stack developer, recently graduated and eager to dive into the world of web development. With a strong foundation in both front-end and back-end technologies, I am excited to create dynamic, user-friendly web applications that solve real-world problems.</p>
         </div>
